# qode

./: .gitignore  CMakeLists.txt  FileSystemView.cpp  FileSystemView.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  README.md  ToolBar.cpp  ToolBar.hpp  main.cpp  qode.desktop  qode_en_US.ts
.github/workflows/: linux-CI-CD.yml  macos-CI-CD.yml  windows-CI-CD.yml
resources/: res.qrc
src/: Editor.cpp  Editor.hpp  FileSystemView.cpp  FileSystemView.hpp  MainWindow.cpp  MainWindow.hpp  ToolBar.cpp  ToolBar.hpp  main.cpp
translations/: qode_en_US.ts
